tests/snapshots/trace_solver__spanshot_request@5169409174527293315.snap
---
source: tests/trace_solver.rs
info:
  options:
    ref_binding_on_inherited: Skip
    mut_binding_on_inherited: Keep
    inherited_ref_on_ref: EatOuter
    allow_ref_pat_on_ref_mut: true
    simplify_expressions: true
    eat_inherited_ref_alone: true
    downgrade_shared_inside_shared: false
  bundle_name: ~
  request: "[ref mut x]: &[T]"
---
[ref mut x] @ p: &[T]
// Applying rule `ConstructorRef`
ref mut x @ &(*p).0: &T
// Applying rule `BindingOverrideBorrow`
x @ &mut (*p).0: &mut T

// Final bindings (simplified):
let x: &mut T = &mut (*p).0 // Borrow-check error: MutBorrowBehindSharedBorrow
